# VehicleComputingSimulator

./: .clang-format  .dockerignore  .git GUI:Add loghandler and widget>  .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.save  DraggableSquare.h  MainWindow.cpp  MainWindow.h  Packet.cpp  SimulationDataManager.cpp  alert.json  client.cpp  client.hpp  communication.cpp  communication.h  communication.hpp  database.db  docker-compose.yml  ecc_tests.cpp  logger.cpp  logger.hpp  main.cpp  main_bus.cpp  manager.cpp  manager.hpp  message.cpp  message.hpp  myClass.cpp  my_tests  run.sh  runTests  server.cpp  server.hpp  sha256_tests.cpp  shared_log_file_name.txt  simulation_data.bson  testCommunication.cpp  user1  (+6 more)
.devcontainer/: devcontainer.json
QT/: MainWindow.cpp  MainWindow.h  Process.cpp  Process.h  ProcessDialog.cpp  ProcessDialog.h
SimulationSave/: CMakeLists.txt  SimulationDataManager.cpp  SimulationDataManager.h  main.cpp
communication/: .gitignore  CMakeLists.txt
communication/include/: Imanager.h  bus_manager.h  central_manager.h  client_connection.h  communication.h  error_code.h  gateway.h  global_clock.h  message.h  network_info.h  packet.h  scheduler.h  server_connection.h  sync_communication.h
communication/sockets/: ESP32_socket.h  Isocket.h  mock_socket.h  real_socket.cpp  real_socket.h
communication/src/: bus_manager.cpp  bus_manager.h  central_manager.cpp  client.cpp  client.h  clientConnection.cpp  client_connection.cpp  client_connection.h  communication.cpp  communication.h  gateway.cpp  global_clock.cpp  global_clock.h  manager.cpp  manager.h  message.cpp  network_info.cpp  packet.cpp  scheduler.cpp  server.cpp  server.h  serverConnection.cpp  server_connection.cpp  server_connection.h  sync_communication.cpp
communication/test/: testCommunication.cpp  testLogger.cpp
communication/tests/: client_test.cpp  server_test.cpp
control/: CMakeLists.txt  camera.json  config.json
control-build_conditons/: sensors.json
control/include/: full_condition.h  global_properties.h  hsm_support.h  sensor.h
control/src/: full_condition.cpp  global_properties.cpp  hsm_support.cpp  main.cpp  sensor.cpp
control/test/: test_complex_build.cpp  test_helper.cpp  test_helper.h  test_simple_build.cpp
control/test/sensors_data/: communication.json  speed.json  tirePressure.json
dummy_program1/: main.cpp
dummy_program2/: main.cpp
gui/: .gitignore  CMakeLists.txt
gui/test/: CMakeLists.txt  test_crash_dump_verify.txt  test_dataToSql.cpp  test_db_manager.cpp  test_draggable_square.cpp  test_frames.cpp  test_log_handler.cpp  test_main_window.cpp  test_process.cpp  test_process_dialog.cpp  user_interaction_tests.cpp
gui/test/FrameTests_autogen/: moc_predefs.h  mocs_compilation.cpp
gui/test/FrameTests_autogen/VNU7RW3YIC/: moc_draggable_square.cpp  moc_frames.cpp  moc_simulation_data_manager.cpp
gui/test/crashProgram/: CMakeLists.txt  config.json  main.cpp
gui/test/crash_program/: CMakeLists.txt  main.cpp
gui/test/dummy_program1/: CMakeLists.txt  config.json  main.cpp
gui/test/dummy_program2/: config.json  create_json.sh  generated_json_file.json  main.cpp
hsm/: .gitignore  CMakeLists.txt  Dockerfile  HSM_Communication.txt  shared_log_file_name.txt
hsm-boot/: CMakeLists.txt  main.cpp
hsm-boot-tmp/: CMakeLists.txt  HSM_Communication.txt  main.cpp
hsm-client/: .gitignore  CMakeLists.txt  Dockerfile  HSM_Communication.txt  shared_log_file_name.txt  use_hsm_client.cmake
hsm-server/: .gitignore  CMakeLists.txt  HSM_Communication.txt
img_processing/: .gitignore  CMakeLists.txt  config.json  data.json  generated_json_file.json
img_processing/include/: alert.h  alerter.h  detection_object_struct.h  detector.h  distance.h  dynamic_tracker.h  hsm_support.h  lane_detector.h  log_manager.h  manager.h  object_information_struct.h  object_type_enum.h  tracker_object_struct.h  velocity.h
img_processing/src/: alert.cpp  alerter.cpp  detector.cpp  distance.cpp  dynamic_tracker.cpp  hsm_support.cpp  lane_detector.cpp  log_manager.cpp  main.cpp  manager.cpp  velocity.cpp
img_processing/tests/: test_detector.cpp  test_distance.cpp  test_dynamic_tracker.cpp  test_lane_detector.cpp  test_manager.cpp  test_serialize.cpp  test_velocity.cpp
include/: IHash.h  aes.h  aes_stream.h  aes_stream_factory.h  asymmetric_keys.h  big_int10.h  big_int64.h  big_int_utils.h  crypto_api.h  crypto_service.h  debug_utils.h  ecc.h  ecc_keys.h  general.h  hash_factory.h  hsm.h  key_manager.h  logger.h  prime_tests.h  return_codes.h  rsa.h  sha256.h  shared_log_file_name.txt  temp_hsm.h
keys/: key_123.json  key_1726490916062.key  key_1726490916065.key  key_1726490916065.pub  key_1726490916068.key  key_1726490958461.key  key_1726490958462.key  key_1726490958462.pub  key_1726490958465.key  key_1726490993095.key  key_1726490993097.key  key_1726490993097.pub  key_1726490993100.key  key_1726491073532.key  key_1726491073534.key  key_1726491073534.pub  key_1726491073537.key  keys.json
logger/: logger.cpp  logger.h
main_bus/: CMakeLists.txt  config.json  main_bus.cpp
parser_json/: CMakeLists.txt
ping/: CMakeLists.txt  websocket_client.cpp  websocket_server.cpp
proto/: encryption.pb.cc  encryption.pb.h  encryption.proto
src/: DraggableSquare.cpp  ECC.cpp  ECC.h  MainWindow.cpp  SHA256.cpp  SHA3-512.cpp  aes.cpp  aes_cbc.cpp  aes_cfb.cpp  aes_ctr.cpp  aes_ecb.cpp  aes_ofb.cpp  aes_stream_factory.cpp  alert.cpp  alerter.cpp  alerter.h  big_int10.cpp  big_int64.cpp  client.cpp  client.h  communication.cpp  crypto_api.cpp  crypto_service.cpp  dataToSql.cpp  dataToSql.h  debug_utils.cpp  detection_object_struct.h  detector.cpp  detector.h  (+43 more)
test/: CMakeLists.txt  testLogger.cpp  test_build.cpp  test_conditions.cpp  test_dataToSql.cpp  test_example.cpp  test_log_handler.cpp  test_main.cpp  test_main_window.cpp
test/FrameTests_autogen/VNU7RW3YIC/: moc_process_dialog.cpp
test/FrameTests_autogen/include/: moc_main_window.cpp  test_frames.moc
user1/: CMakeLists.txt  HSM_Communication.txt  conditions.bson  config.json  user_1.cpp
user2/: CMakeLists.txt  config.json  user_2.cpp
(+225 files in other folders)
